fix: calc-wrap sass division

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -307,7 +307,7 @@ a
                     margin-right: .25em
                     letter-spacing: .1em
                 .petals-earned-icon
-                    width: $result-title-size / 4 * 3
+                    width: calc($result-title-size / 4 * 3)
                 .petals-earned-for
                     font-size: 16px
                     color: colors.$gray
